# dockerignore-generate

./: .gitignore  CHANGES.txt  MANIFEST.in  Makefile  README.md  README.rst  dockerignore-generate  setup.cfg  setup.py
