[metadata]
author = "Denis Khoshaba"
author-email = "deniskhoshaba@gmail.com"
url = "https://github.com/TheDen/dockerignore-generate"
description = "Generate dockerignore data"
description-file = README.md
license = "GPL-2.0"
doc_files = CHANGES.txt
           README.md
classifier =
    Operating System :: POSIX :: Linux
								Topic :: Utilities
    Programming Language :: Python
